// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brainAtlas render goldens > detail panel: cerebellum (ACCURACY LOCK — ~80%, not 50%) 1`] = `
{
  "buttons": 60,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 154,
  "sha": "63f3f722f83af6a2",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > detail panel: dopamine (ACCURACY LOCK — no "pleasure chemical" overclaim) 1`] = `
{
  "buttons": 62,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 186,
  "sha": "293972c74cc5fcfa",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > quiz mode renders a question + options 1`] = `
{
  "buttons": 60,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 141,
  "sha": "48321774658858d0",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: basalGangliaLoop renders + pins a digest 1`] = `
{
  "buttons": 59,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 186,
  "sha": "42389ea306951947",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: brainstemCrossSection renders + pins a digest 1`] = `
{
  "buttons": 55,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 168,
  "sha": "9dda0b7ccd290da0",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cerebellumClinic renders + pins a digest 1`] = `
{
  "buttons": 55,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 167,
  "sha": "752e7f0003f09920",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cranialNervesWillis renders + pins a digest 1`] = `
{
  "buttons": 64,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 200,
  "sha": "ffe6125a83d883a6",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: crossLateral renders + pins a digest 1`] = `
{
  "buttons": 55,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 179,
  "sha": "2d7f77c701e6e6cf",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: csfHydrocephalus renders + pins a digest 1`] = `
{
  "buttons": 55,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 169,
  "sha": "8a1c4cf533897f34",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: eegWaves renders + pins a digest 1`] = `
{
  "buttons": 62,
  "canvases": 2,
  "inputs": 1,
  "lengthBucket": 183,
  "sha": "47779210dc48883e",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: homunculus renders + pins a digest 1`] = `
{
  "buttons": 57,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 166,
  "sha": "a912e201fe1a93bf",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: inferior renders + pins a digest 1`] = `
{
  "buttons": 64,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 177,
  "sha": "2a0691d8c764378e",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: languageNetwork renders + pins a digest 1`] = `
{
  "buttons": 61,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 182,
  "sha": "576545dcbd91307c",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: lateral renders + pins a digest 1`] = `
{
  "buttons": 69,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 201,
  "sha": "a4dfe56b03ad4e81",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: limbicPapezLoop renders + pins a digest 1`] = `
{
  "buttons": 62,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 201,
  "sha": "01e39833e02d8c83",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: medial renders + pins a digest 1`] = `
{
  "buttons": 68,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 196,
  "sha": "a8b11d04fbd54cbc",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neuron renders + pins a digest 1`] = `
{
  "buttons": 55,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 172,
  "sha": "6316a1b87a1a615a",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neurotransmitters renders + pins a digest 1`] = `
{
  "buttons": 76,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 259,
  "sha": "2a09910478299e96",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: prenatalDevelopment renders + pins a digest 1`] = `
{
  "buttons": 56,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 164,
  "sha": "ed34c02cb6f93ae8",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: sleepStages renders + pins a digest 1`] = `
{
  "buttons": 53,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 163,
  "sha": "9b599b4592332dad",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: stimulate renders + pins a digest 1`] = `
{
  "buttons": 58,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 174,
  "sha": "928939faa15f54ae",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: strokeTerritories renders + pins a digest 1`] = `
{
  "buttons": 55,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 169,
  "sha": "3a44a2c0dee0bf1f",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: superior renders + pins a digest 1`] = `
{
  "buttons": 61,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 161,
  "sha": "2a21ea8b2ed1ca9e",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: synapses renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 163,
  "sha": "9b1f3e50f8a9b665",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: visualPathway renders + pins a digest 1`] = `
{
  "buttons": 60,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 180,
  "sha": "8114551b1b092a17",
  "svgs": 0,
}
`;
